manifests/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd

#kubectl apply -f argocd-namespace.yaml
