manifests/chewbacca_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chewbacca
  labels:
    name: chewbacca
