manifests/argocd-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort   # simple for teaching; later can upgrade to Ingress
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 9081
      targetPort: 8080
      nodePort: 30081   # optional: fixed for labs

# kubectl apply -f argocd-port.yaml
