manifests/chewbacca_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: chewbacca
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: 80
