manifests/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: kong
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
