manifests/apply_ratelimit_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ratelimit-ingress
  namespace: chewbacca
  annotations:
    konghq.com/plugins: my-rate-limiting-plugin
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /hello-ratelimit
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
