manifests/ingress-rate-limit-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: kong
  annotations:
    konghq.com/plugins: key-auth-plugin,rate-limit-plugin
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
